syntax = "proto3";
package Protobuf.S2C;


message ProtoMessageDebug
{
	string Message = 1;
}