syntax = "proto3";
package Protobuf.S2C;

message GameResult
{
    bool isWin = 1;
}
